<resources>
    <string name="app_name">Active Sleep</string>
    <string name="facebook_app_id">2201518700113297</string>
    <string name="fb_login_protocol_scheme">fb2201518700113297</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">rc2gnsgVzX2fG9KiL6Pve31z3</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">nEO2fsheDq9F4tpcCCMeLJRlUHWw8vhZYGO89gTvbZrviLQWzX</string>
    <string name="client_id">622649747999-qr1rul80mdc7mvh7a0g1tm47j58uojor.apps.googleusercontent.com</string>
    <string name="welcome_page_tagline">まずはお手持ちのスマートフォンと パラマウントベッド機器をペアリングしましょう</string>
    <string name="welcome_page_welcome_text">Welcome!</string>
    <string name="welcome_page_bottom_text">Active Sleep LOGO</string>
    <string name="slider_page_text_1">Lorem Ipsum</string>
    <string name="slider_page_text_2">Lorem Ipsum</string>
    <string name="slider_page_text_3">Lorem Ipsum</string>
    <string name="slider_page_text_4">Lorem Ipsum</string>
    <string name="slider_page_button_text">Button text</string>
    <string name="slider_page_bottom_text">Bottom text</string>
    <string name="title_1">Title 1</string>
    <string name="title_2">Title 2</string>
    <string name="title_3">Title 2</string>
    <string name="title_4">Title 2</string>
    <string name="text_1">Title 1</string>
    <string name="text_2">Title 2</string>
    <string name="text_3">Title 2</string>
    <string name="text_4">Title 2</string>
    <string name="UI000200C004">新規登録</string>
    <string name="UI000200C005">ログイン</string>
    <string name="UI000200C006">はじめてご利用になる方</string>
    <string name="UI000200C007">既にご利用されていた方</string>
    <string name="UI000200C008">はじめてご利用になる方 (企業ユーザー)</string>
    <string name="UI000200C009">企業ユーザー新規登録</string>
    <string name="UI000300C001">利用規約</string>
    <string name="UI000300C002">本利用規約は、パラマウントベッド株式会社（以下、「当社」）が提供するスマトフォンアプリケーション  「ActiveSleepAPP」の利用に関し</string>
    <string name="UI000300C005">同意する</string>
    <string name="UI000300C006">戻る</string>
    <string name="UI000300C007">次へ</string>
    <string name="UI000310C001">眠りSCANとの接続設定</string>
    <string name="UI000310C002">Bluetooth接続開始</string>
    <string name="UI000310C003">1. スマートフォンのBluetoothをオンにしてください。</string>
    <string name="UI000310C006">Bluetooth設定</string>
    <string name="UI000310C007">戻る</string>
    <string name="UI000310C008">Bluetooth接続完了しました</string>
    <string name="UI000310C009">Bluetooth接続失敗しました</string>
    <string name="UI000310C010">パラマウント製品の電源をオンにして、ペアリングモードになっていることを確認してください。</string>
    <string name="UI000310C011">眠りSCANのネットワーク設定を行います</string>
    <string name="UI000311C001">眠りSCAN選択</string>
    <string name="UI000311C002">眠りSCANを選択してください。</string>
    <string name="UI000311C003">information</string>
    <string name="UI000311C004">眠りSCANの初期設定が完了しました。</string>
    <string name="UI000311C005">眠りSCANの初期設定が失敗しました。</string>
    <string name="UI000311C006">戻る</string>
    <string name="UI000320C001">WiFi information</string>
    <string name="UI000320C003">WiFiネットワーク選択</string>
    <string name="UI000320C004">WiFiネットワークを選択してください</string>
    <string name="UI000320C005">WiFiネットワークが見つからない場合は、再度端末のWiFi接続を実施してください</string>
    <string name="UI000320C006">再スキャン</string>
    <string name="UI000320C007">戻る</string>
    <string name="UI000330C001">WiFiパスワード入力</string>
    <string name="UI000330C002">選択したWiFiネッ入力してくださいトワークのパスワードを</string>
    <string name="UI000330C005">QRコード読込</string>
    <string name="UI000330C006">接続</string>
    <string name="UI000330C007">戻る</string>
    <string name="UI000340C001">WiFi接続準備中</string>
    <string name="UI000340C002">完了までに数分かかる場合があり茨す</string>
    <string name="UI000340C003">WiFi接続完了しました</string>
    <string name="UI000340C004">WiFi接続失敗しました</string>
    <string name="UI000400C001">アカウント作成</string>
    <string name="UI000400C002">あなたのアカウントを作成しましょう</string>
    <string name="UI000400C003">メールアドレス</string>
    <string name="UI000400C004">Facebook</string>
    <string name="UI000400C005">Twitter</string>
    <string name="UI000400C006">Google+</string>
    <string name="UI000400C007">戻る</string>
    <string name="UI000401C001">アカウント作成</string>
    <string name="UI000401C002">あなたのアカウントを作成しましょう</string>
    <string name="UI000401C003">メールアドレス</string>
    <string name="UI000401C004">戻る</string>
    <string name="UI000410C001">メールアドレス登録</string>
    <string name="UI000410C002">メールアドレスとパスワードを入力してください</string>
    <string name="UI000410C003">メールアドレス</string>
    <string name="UI000410C004">パスワード</string>
    <string name="UI000410C005">確認用パスワード</string>
    <string name="UI000410C009">次へ</string>
    <string name="UI000410C010">戻る</string>
    <string name="UI000410C011">受信メールをご確認ください</string>
    <string name="UI000410C014">入力したメールアドレス宛にメール送\n信いたしました。\nメール本文のリンクを押下し、次の画面に進んでください</string>
    <string name="UI000410C015">パスワードが一致しません</string>
    <string name="UI000410C016">メールは空ではありません</string>
    <string name="UI000410C017">パスワードは6文字でなければなりません</string>
    <string name="UI000410C018">お使いの携帯電話がインターネットに接続されていないため、接続を確認してください</string>
    <string name="UI000420C001">端末認証（携帯番号入力)</string>
    <string name="UI000420C002">携帯電話番号を入れてください</string>
    <string name="UI000420C003">携帯電話番号</string>
    <string name="UI000420C005">次へ</string>
    <string name="UI000420C006">戻る</string>
    <string name="UI000420C007">受信メールをご確認ください</string>
    <string name="UI000420C010">入力したメールアドレス宛にSMS暗証番号を、次の画面にて入力して送信いたしましたメール本文ください</string>
    <string name="UI000430C001">端末認証（暗証番号入力）</string>
    <string name="UI000430C002">受信したSMSに記載されている暗証番号を入力してください</string>
    <string name="UI000430C003">暗証番号</string>
    <string name="UI000430C005">次へ</string>
    <string name="UI000430C006">戻る</string>
    <string name="UI000430C007">暗証番号の認証が完了しました。次へのボタンを押し、新規ユーザー登録の手続きを完了してください。</string>
    <string name="UI000430C010">暗証番号の認証が失敗しました。 次へのボタンを押し、暗証番号の認証を再度行ってください。</string>
    <string name="UI000440C001">アカウント情報入力</string>
    <string name="UI000440C002">会員情報入力画面を入力してください</string>
    <string name="UI000440C012">※必須項目</string>
    <string name="UI000440C003">ニックネーム※</string>
    <string name="UI000440C004">生年月日※</string>
    <string name="UI000440C005">性別※</string>
    <string name="UI000440C006">次へ</string>
    <string name="UI000440C010">Popup Message</string>
    <string name="UI000440C013">月</string>
    <string name="UI000440C014">日</string>
    <string name="UI000440C015">男性</string>
    <string name="UI000440C016">女性</string>
    <string name="UI000440C017">他</string>
    <string name="UI000450C001">アカウント情報入力</string>
    <string name="UI000450C002">会員情報入力画面を入力してください 任意項目</string>
    <string name="UI000450C003">お住まいの地域</string>
    <string name="UI000450C004">都道府県</string>
    <string name="UI000450C005">市区村町/番地</string>
    <string name="UI000450C006">身長</string>
    <string name="UI000450C007">cm</string>
    <string name="UI000450C008">体重</string>
    <string name="UI000450C009">kg</string>
    <string name="UI000450C010">郵便番号検索</string>
    <string name="UI000450C011">次へ</string>
    <string name="UI000450C012">戻る</string>
    <string name="UI000450C018">Popup</string>
    <string name="UI000450C019">企業コードをお持ちの方はこちらをチェック</string>
    <string name="UI000450C020">企業コード</string>
    <string name="UI000460C001">アンケート入力</string>
    <string name="UI000460C002">アンケートにお答えください</string>
    <string name="UI000470C001">ログイン方法選択</string>
    <string name="UI000470C002">作成したアカウントでログインしてください</string>
    <string name="UI000460C003">次へ</string>
    <string name="UI000460C004">戻る</string>
    <string name="UI000465C001">アカウント情報確認</string>
    <string name="UI000465C002">以下の情報でアカウント登録を行います内容をご確認ください。</string>
    <string name="UI000465C003">ニクネーム</string>
    <string name="UI000465C004">生年月日</string>
    <string name="UI000465C005">性別</string>
    <string name="UI000465C006">お住まいの地域</string>
    <string name="UI000465C007">身長</string>
    <string name="UI000465C008">体重</string>
    <string name="UI000465C009">アカウント登録</string>
    <string name="UI000465C010">戻る</string>
    <string name="UI000465C011">企業コード</string>
    <string name="UI000470C003">メールアドレス</string>
    <string name="UI000470C004">Facebook</string>
    <string name="UI000470C005">Twitter</string>
    <string name="UI000470C006">Google+</string>
    <string name="UI000470C007">Back</string>
    <string name="UI000480C001">ログイン</string>
    <string name="UI000480C002">メールアドレスとパスワードを入力してください</string>
    <string name="UI000480C003">メールアドレス</string>
    <string name="UI000480C004">パスワード</string>
    <string name="UI000480C005">ID/パスワードをお忘れですか</string>
    <string name="UI000480C006">ログイン</string>
    <string name="UI000480C007">戻る</string>
    <string name="UI000480C008">IDをお忘れですか？</string>
    <string name="UI000491C001">パスワード再設定SMS送信</string>
    <string name="UI000491C002">新しい暗証暗号を設定するため、ワンタイム暗証番号付きSMSを送信します</string>
    <string name="UI000491C003">アカウント情報は 話番号と生年月日を入力してください</string>
    <string name="UI000491C004">電話番号</string>
    <string name="UI000491C005">生年月日</string>
    <string name="UI000491C006">SMS送信する</string>
    <string name="UI000491C007">戻る</string>
    <string name="UI000492C001">暗証番号確認</string>
    <string name="UI000492C002">ASSサーバから受信したSMSに記載されている暗証番号を入力してください。</string>
    <string name="UI000492C003">暗証番号</string>
    <string name="UI000492C004">次へ</string>
    <string name="UI000492C005">戻る</string>
    <string name="UI000493C001">パスワード再設定</string>
    <string name="UI000493C002">新しいパスワードを入力してください</string>
    <string name="UI000493C003">パスワード</string>
    <string name="UI000493C004">確認用パスワード</string>
    <string name="UI000493C005">設定</string>
    <string name="UI000496C001">ご利用のID情報取得</string>
    <string name="UI000496C002">ご利用のID情報を取得するため、ワンタイム暗証番号付きSMSを送信します。</string>
    <string name="UI000496C003">アカウント情報に設定された電話番号と生年月日を入力してださい*</string>
    <string name="UI000496C004">電話番号</string>
    <string name="UI000496C005">生年月日</string>
    <string name="UI000496C006">SMS送信する</string>
    <string name="UI000496C007">戻る</string>
    <string name="UI000497C001">暗証番号確認</string>
    <string name="UI000497C002">ASSサーバから受信したSMSに記載されている暗証番号を入力してください。</string>
    <string name="UI000497C003">暗証番号</string>
    <string name="UI000497C004">次へ</string>
    <string name="UI000497C005">戻る</string>
    <string name="UI000498C001">ご利用のIDの情報</string>
    <string name="UI000498C002">ご利用にID（メールアドレス）は以下となります</string>
    <string name="UI000498C003">ID</string>
    <string name="UI000498C004">ログイン画面に戻る</string>
    <string name="UI000540C001">リアルタイムモニタ</string>
    <string name="UI000540C002">リアルタイムモニタ</string>
    <string name="UI000640C001">FREE</string>
    <string name="UI000640C002">好みの硬さへ自由調整</string>
    <string name="UI000640C003">頭</string>
    <string name="UI000640C004">肩</string>
    <string name="UI000640C005">腰</string>
    <string name="UI000640C006">でん部</string>
    <string name="UI000640C007">ひざ</string>
    <string name="UI000640C008">かかと</string>
    <string name="UI000640C009">柔らかい</string>
    <string name="UI000640C010">硬い</string>
    <string name="UI000700C001">アカウント情報</string>
    <string name="UI000700C002">編集</string>
    <string name="UI000700C003">ニックネーム</string>
    <string name="UI000700C004">メールアドレス</string>
    <string name="UI000700C005">生年月日</string>
    <string name="UI000700C006">性別</string>
    <string name="UI000700C007">お住まいの地域</string>
    <string name="UI000700C008">身長</string>
    <string name="UI000700C009">体重</string>
    <string name="UI000700C010">企業コード</string>
    <string name="UI000700C011">ログアウト</string>
    <string name="UI000700C012">退会する</string>
    <string name="UI000710C001">アカウント情報変更</string>
    <string name="UI000710C002">ニックネーム</string>
    <string name="UI000710C003">生年月日</string>
    <string name="UI000710C004">性別</string>
    <string name="UI000710C005">男性</string>
    <string name="UI000710C006">女性</string>
    <string name="UI000710C007">他</string>
    <string name="UI000710C008">お住まいの地域</string>
</resources>